--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,5 +2,10 @@ spring.datasource.url=jdbc:mysql://localhost:3306/log2me
 spring.datasource.username=ramiro
 spring.datasource.password=ramiro1234
 
-spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.hibernate.ddl-auto=update
+
+application.jwt.secret=secretSuperSecret
+application.jwt.tokenPrefix=Bearer 
+application.jwt.issuer=ramiro.com
+application.jwt.expirationDays=14
